<resources>
    <string name="app_name">Reddoulette</string>

    <string name="url_random">http://www.reddit.com/r/random/.json</string>
    <string name="url_playstore">https://play.google.com/store/apps/details?id=com.qualcode.reddoulette</string>

    <string name="error_subreddit">Unable to retrieve a random subreddit. Please try again</string>

    <string name="action_nsfw">Show NSFW</string>
    <string name="action_rate">Rate App</string>
    <string name="action_share_app">Share App</string>
    <string name="action_share_post">Share Post</string>
    <string name="action_open_reddit">View in Reddit</string>
    <string name="action_signin">Sign In To Google</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_leaderboard">Leaderboards</string>
    <string name="action_achievements">Achievements</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="signin_failure">Sign In Error</string>
    <string name="app_misconfigured">App Misconfigured</string>
    <string name="sign_in_failed">Sign In Error</string>
    <string name="license_failed">License Failed</string>

    <string name="share_app_subject">Reddoulette - A Reddit discovery game</string>
    <string name="share_app_body">Checkout Reddoulette, a game where you view random Reddit subreddits while earning achievements and climbing a leaderboard.\n\nhttps://play.google.com/store/apps/details?id={{packageid}}</string>

    <string name="dialog_initialrun">Do you want to login for achievements and leaderboards?</string>
</resources>
